# agentic-ai-content-gen

./: .gitignore  README.md
app/: .env_example  Dockerfile  README.md  configs.json  configs.local.json  configs.tests.json  configs_logger.tests.json  configs_mcp.json  handler_basic_research.py  handler_content_gen.py  handler_lambda.py  handler_local_ui.py  handler_meme_gen.py  lambda_handler.py  lambda_handlers.py  logger_configs.json  logger_configs.local.json  main.py  main_langgraph.py  mock_event.json  pyproject.toml  report.md  test.py
app/agent/: crew.py  main.py
app/agent_crewai/: agent.py  crew.py  main.py
app/agent_crewai/tools/: custom_tool.py
app/agent_langgraph/: agent.py  elements.py  graph.py
app/agents/basic_research/: agent.py  di.py  elements.py  graph.py
app/agents/content_gen/: agent.py  crew.py  di.py  main.py
app/agents/crewai/: agent.py  crew.py  main.py
app/agents/langgraph/: agent.py  elements.py  graph.py
app/configurations/: configs.py  configs_parser.py  configuration_module.py  di_container.py  di_services.py  service_collection.py
app/controllers/: app_controller.py  controller.py  crewai_controller.py  langgraph_controller.py  web_ui.py  worker.py
app/crosscutting/: app_lifecycle.py  app_logger.py  background_service.py  cancellation_token.py  graceful_shutdown.py  memoize_method.py  one_shot_background_service.py  semantic_cache.py  service_provider.py
app/infrastructure/: google_trends_client.py  imgur_auth.py  imgur_client.py  serper_dev_client.py  tavily_client.py
app/mcp_servers/: social_networks.py
app/repositories/: image_generation_repository.py  image_repository.py  social_networks_repository.py  used_topics_repository.py  web_search_repository.py  web_trends_repository.py
app/src/: configs_mcp.json  handler_lambda.py  handler_web_ui.py  test.py
app/tests/: mock_input.py
app/ui/: ui.py
app/workers/: crewai_worker.py  langgraph_worker.py
(+88 files in other folders)
