[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "ansi2html>=1.9.2",
    "boto3>=1.38.40",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.8.1",
    "gradio>=5.34.2",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langsmith>=0.3.18",
    "lock>=2018.3.25.2110",
    "openai>=1.68.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "tavily-python>=0.7.2",
    "trendspy>=0.1.6",
    "uv>=0.7.13",
]

